[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cronpan"
version = "0.1.0"
description = "Cron job monitor for humans — view, toggle, and tail your cron jobs from a browser"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourname/cronpan"
Repository = "https://github.com/yourname/cronpan"
Issues = "https://github.com/yourname/cronpan/issues"

[project.scripts]
cronpan = "cronpan.cli:main"

[tool.setuptools]
packages = ["cronpan"]

[tool.setuptools.package-data]
cronpan = ["static/*", "static/**/*", "logger.sh"]
